CMAKE_MINIMUM_REQUIRED(VERSION 3.15.0)

# PROJECT(MkBEM)
# SET(proj_name "MkBEM")
# SET(CMAKE_CXX_STANDARD 20)

SET( EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/build )
SET( LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/../MkLIB )
SET( BINARY ${CMAKE_PROJECT_NAME} )

file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.h *.cpp)
file(GLOB GLLIB "/opt/homebrew/lib/libGL.dylib")
file(GLOB GLUTLIB "/opt/homebrew/lib/libglut.dylib")

# set sources
SET (SRC_FILES
      mainunit.cpp
      bemunit.cpp
      inputunit.cpp
    )

# SET(SRC_FILES ${SCOURCES}) 

ADD_DEFINITIONS(-DMKDEBUG)

#build
# ADD_EXECUTABLE(${BINARY}_RUN ${SRC_FILES})
ADD_LIBRARY (${BINARY} ${SRC_FILES})

## Windows
# TARGET_LINK_LIBRARIES(${BINARY} glu32 freeglut)

## macOS
  TARGET_LINK_LIBRARIES(${BINARY} ${GLLIB} ${GLUTLIB})

## Linux
# TARGET_LINK_LIBRARIES(${BINARY} GL glut)

